--- a/Entrega2-war/web/ciudadano.xhtml
+++ b/Entrega2-war/web/ciudadano.xhtml
@@ -6,7 +6,7 @@
       xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <head>
-
+    <!--Vista ciudadano-->
     <!--<meta charset="utf-8" />-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
