Login, en caso de ir a login con con sesion ya iniciada te da la opcion de volver a tu pg o cerrar sision Administrador, obtiene el nombre correcto

--- a/Entrega2-war/web/login.xhtml
+++ b/Entrega2-war/web/login.xhtml
@@ -91,7 +91,11 @@
                                             </h:form>
                                         </c:when>
                                         <c:otherwise>
-                                            <p>la sesion ya esta iniciada</p>
+                                            <h:form>
+                                                <p>la sesion ya esta iniciada</p>
+                                                <h:commandButton value="Ir a mi pg" action="#{controlAutorizacion.home()}"  />
+                                                <h:commandButton value="Log Out" action="#{controlAutorizacion.logout()}" />
+                                            </h:form>
                                         </c:otherwise>
                                     </c:choose>
                                 </div>
