--- a/Entrega2-war/web/crearDemandaAdministrativo.xhtml
+++ b/Entrega2-war/web/crearDemandaAdministrativo.xhtml
@@ -169,7 +169,7 @@
                                 <a href="eliminarCiudadano.xhtml">Borrar Ciudadano</a>
                             </li>
                             <li>
-                                <a href="#">Actualizar Ciudadano</a>
+                                <a href="actualizarCiudadano.xhtml">Actualizar Ciudadano</a>
                             </li>
                         </ul>
                     </li>
@@ -178,7 +178,7 @@
                         <a href="#"><i class="fa fa-fw fa-table"></i> Cita Previa</a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</a>
+                        <a href="crearDemandaAdministrativo.xhtml"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</a>
                     </li>
                 </ul>
             </div>
