--- a/Entrega2-war/web/crearDemandaCiudadano.xhtml
+++ b/Entrega2-war/web/crearDemandaCiudadano.xhtml
@@ -179,7 +179,7 @@
                     
                     <!-- Creacion de una nueva demanda -->
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</a>
+                        <a href="crearDemandaCiudadano.xhtml"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</a>
                     </li>
                 </ul>
             </div>
