--- a/Entrega2-war/web/eliminarUsuario.xhtml
+++ b/Entrega2-war/web/eliminarUsuario.xhtml
@@ -164,16 +164,16 @@
                         <ul id="demo" class="collapse">
                             
                             <li>
-                                <a href="#">Crear Jefe de Servicio</a>
+                                <a href="crarJefeServicio.xhtml">Crear Jefe de Servicio</a>
                             </li>
                             <li>
-                                <a href="#">Crear Administrativo</a>
+                                <a href="crearAdministrativo.xhtml">Crear Administrativo</a>
                             </li>
                             <li>
-                                <a href="#">Crear T&eacute;cnico</a>
+                                <a href="crearTecnico.xhtml">Crear T&eacute;cnico</a>
                             </li>
                             <li>
-                                <a href="#">Actualizar Usuario</a>
+                                <a href="actualizarUsuario.xhtml">Actualizar Usuario</a>
                             </li>
                              <li>
                                 <a href="eliminarUsuario.xhtml">Eliminar Usuario</a>
