María y Salva - vista eliminar ciudadano añadida (vistas y backing b.)

--- a/Entrega2-war/web/actualizarUsuario.xhtml
+++ b/Entrega2-war/web/actualizarUsuario.xhtml
@@ -175,7 +175,7 @@
                     </li>
 
                     <li>
-                        <a href="citaPrevia.xhtml"><i class="fa fa-fw fa-table"></i> Cita Previa</a>
+                        <a href="citaPreviaAdministrativo.xhtml"><i class="fa fa-fw fa-table"></i> Cita Previa</a>
                     </li>
                     <li>
                         <a href="crearDemandaAdministrativo.xhtml"><i class="fa fa-fw fa-bar-chart-o"></i> Crear Demanda</a>
